# 26-wuren-YangZicheng

./: README.md
HW1/: .bashrc  script.sh
HW2_CMake/: CMakeLists.txt
HW2_CMake/CMake 1/: server.cpp
HW2_CMake/CMake 1/common/kalman/: CMakeLists.txt
HW2_CMake/CMake 1/common/math/: CMakeLists.txt
HW2_CMake/CMake 1/modules/A1/: CMakeLists.txt
HW2_CMake/CMake 1/modules/A2/: CMakeLists.txt
HW2_CMake/CMake 1/modules/M1/: CMakeLists.txt
HW2_CMake/CMake 1/modules/M2/: CMakeLists.txt
HW3_ROS_1/: ROS_Readme
HW3_ROS_1/catkin_workspace/: CMakeLists.txt  README.md
HW3_ROS_1/catkin_workspace/src/turtle_control_pkg/: CMakeLists.txt  package.xml
HW3_ROS_1/catkin_workspace/src/turtle_control_pkg/config/: turtle_params.yaml
HW3_ROS_1/catkin_workspace/src/turtle_control_pkg/launch/: simple_turtle_control.launch  turtle_control.launch
HW3_ROS_1/catkin_workspace/src/turtle_control_pkg/msg/: TurtleVelocity.msg
HW3_ROS_1/catkin_workspace/src/turtle_control_pkg/scripts/: simple_linear_publisher.py  turtle_velocity_publisher.py
HW3_ROS_1/catkin_workspace/src/turtle_control_pkg/src/: custom_publisher.cpp  custom_subscriber.cpp  simple_turtle_controller.cpp  turtle_controller.cpp
HW3_ROS_1/catkin_ws/devel/: .catkin
HW3_ROS_1/catkin_ws/devel/include/turtle_control_pkg/: TurtleVelocity.h
HW3_ROS_1/catkin_ws/devel/lib/pkgconfig/: turtle_control_pkg.pc
HW3_ROS_1/catkin_ws/devel/lib/python3/dist-packages/turtle_control_pkg/msg/: _TurtleVelocity.py
HW3_ROS_1/catkin_ws/devel/lib/turtle_control_pkg/: TurtleVelocity_publisher.py  controller
HW3_ROS_1/catkin_ws/devel/share/common-lisp/ros/turtle_control_pkg/msg/: TurtleVelocity.lisp  _package.lisp  _package_TurtleVelocity.lisp  turtle_control_pkg-msg.asd
HW3_ROS_1/catkin_ws/devel/share/gennodejs/ros/turtle_control_pkg/msg/: TurtleVelocity.js
HW3_ROS_1/catkin_ws/devel/share/roseus/ros/turtle_control_pkg/: manifest.l
HW3_ROS_1/catkin_ws/devel/share/roseus/ros/turtle_control_pkg/msg/: TurtleVelocity.l
HW3_ROS_1/catkin_ws/devel/share/turtle_control_pkg/cmake/: turtle_control_pkg-msg-paths.cmake  turtle_control_pkgConfig.cmake
HW3_ROS_1/catkin_ws/src/turtle_control_pkg/: CMakeLists.txt  package.xml
HW3_ROS_1/catkin_ws/src/turtle_control_pkg/config/: param.yaml
HW3_ROS_1/catkin_ws/src/turtle_control_pkg/launch/: turtle_control.launch
HW3_ROS_1/catkin_ws/src/turtle_control_pkg/script/: TurtleVelocity_publisher.py
HW3_ROS_1/catkin_ws/src/turtle_control_pkg/src/: controller.cpp
HW3_ROS_2/: ROS_Readme2
HW3_ROS_2/catkin_ws/: play_bag.sh  run_cone_analysis.sh
HW3_ROS_2/catkin_ws/devel/: .catkin  setup.fish
HW3_ROS_2/catkin_ws/devel/lib/pkgconfig/: cone_analysis.pc  fsd_common_msgs.pc  project_image.pc
HW3_ROS_2/catkin_ws/devel/lib/project_image/: project_image_node
HW3_ROS_2/catkin_ws/devel/share/cone_analysis/cmake/: cone_analysisConfig.cmake
HW3_ROS_2/catkin_ws/devel/share/fsd_common_msgs/cmake/: fsd_common_msgs-msg-extras.cmake  fsd_common_msgs-msg-paths.cmake  fsd_common_msgsConfig.cmake
HW3_ROS_2/catkin_ws/devel/share/project_image/cmake/: project_imageConfig.cmake
HW3_ROS_2/catkin_ws/devel/share/roseus/ros/fsd_common_msgs/: manifest.l
HW3_ROS_2/catkin_ws/src/cone_analysis/: CMakeLists.txt  package.xml
HW3_ROS_2/catkin_ws/src/cone_analysis/config/: cone_visualization.rviz
HW3_ROS_2/catkin_ws/src/cone_analysis/launch/: cone_analysis.launch
HW3_ROS_2/catkin_ws/src/cone_analysis/scripts/: cone_counter_visualizer.py
HW4_Cpp/: Cpp_Notes
HW4_Cpp/catkin_ws/: README_launch.md
HW4_Cpp/catkin_ws/devel/: .catkin
HW4_Cpp/catkin_ws/devel/lib/pkgconfig/: fsd_common_msgs.pc  project_image.pc
HW4_Cpp/catkin_ws/devel/lib/project_image/: lidar_point  project_image  project_image_node
HW4_Cpp/catkin_ws/devel/share/fsd_common_msgs/cmake/: fsd_common_msgs-msg-extras.cmake  fsd_common_msgs-msg-paths.cmake  fsd_common_msgsConfig.cmake
HW4_Cpp/catkin_ws/devel/share/gennodejs/ros/fsd_common_msgs/msg/: _index.js
HW4_Cpp/catkin_ws/devel/share/project_image/cmake/: project_imageConfig.cmake
HW4_Cpp/catkin_ws/devel/share/roseus/ros/fsd_common_msgs/: manifest.l
HW4_Cpp/catkin_ws/src/fsd_common_msgs/: CMakeLists.txt
HW4_Cpp/catkin_ws/src/project_image/: CMakeLists.txt  README_launch.md  package.xml
HW4_Cpp/catkin_ws/src/project_image/config/: image_visualization.rviz  lidar_visualization.rviz
HW4_Cpp/catkin_ws/src/project_image/launch/: lidar_point.launch  project_image.launch
HW4_Cpp/catkin_ws/src/project_image/src/: lidar_point.cpp  project_image.cpp
HW5_ML/: California.ipynb  California.py  Kmeans_Exp.ipynb  Text Document  softmax.ipynb
